fixed navbar: -no horizontal scrollbar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,7 +15,7 @@ body {
   justify-content: center;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 15px 0;
 }
 
 .container-fluid {
@@ -24,7 +24,6 @@ body {
   justify-content: space-between;
   width: 100vw;
   margin: 0;
-  padding: 0 15px;
 }
 
 .container-fluid img {
